bug: letter spacing

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -44,6 +44,7 @@ h4,
 h5,
 h6 {
   line-height: 120%;
+  letter-spacing: -0rem;
   color: $text-01;
 }
 
@@ -74,17 +75,20 @@ h6 {
 p {
   font-size: 0.875rem;
   line-height: 130%;
+  letter-spacing: 0.02rem;
   color: $text-01;
 }
 
 a {
   font-size: 0.875rem;
+  letter-spacing: 0.02rem;
   color: $text-01;
   text-decoration: none;
 }
 
 span {
   font-size: 0.875rem;
+  letter-spacing: 0.02rem;
   color: $text-01;
   letter-spacing: 1%;
 }
@@ -92,6 +96,7 @@ span {
 button {
   font-family: $font-family;
   font-size: 0.875rem;
+  letter-spacing: 0.02rem;
 }
 
 .nav-text {
@@ -99,12 +104,14 @@ button {
   color: $text-blend;
   text-decoration: none;
   font-weight: 400;
+  letter-spacing: 0.02rem;
 }
 
 .nav-link {
   font-size: 0.875rem;
   color: $text-blend;
   text-decoration: none;
+  letter-spacing: 0.02rem;
 }
 
 /* Spacing */
